# infra

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh
.buildkite/: README.md  pipeline.yml
.buildkite/hooks/: notify.sh  pre-exit  pre-exit.sh
ami/buildenv/: README.md  ansible.cfg  buildenv.json  hugo.sh  provision.yml
ami/docker/: README.md  packer.json  provision.yml
ami/smp/: dump.json  packer.json  pgdump.sh  provision.yml  ssh.cfg  vault.yml
ami/smp_db/: Dockerfile  README.md  database.sh  packer.json
ami/smp_dump/: README.md  ansible.cfg  pgdump.sh  provision.yml
ami/ubuntu1804/: README.md  bionic.json  provision.yml
ansible/inventory/: ec2.ini  ec2.py
ansible/roles/awslogs/tasks/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/cloudwatch_agent/: README.md
aws/accuen/atlantis/: main.tf
aws/accuen/base/: build.sh  buildenv.tf
aws/accuen/build_old/: ami.tf  ansible.cfg  buildenv-config.yml  iam_build_env.tf  main.tf  r53.tf  ref.tf  ssh.cfg  variables.tf
aws/accuen/dc_dev/: dean.tf  jason.tf  jeremiah.tf  jonny.tf  main.tf  matt.tf  mike.tf  ref.tf  test.txt
aws/accuen/dev1/: build.sh  env.tf  iam_dev_machines.tf  iam_dev_policy.tf  main.tf  r53.tf  vpc.tf
aws/accuen/foundation/: main.tf  r53-lambda.tf
aws/accuen/ops/: buildenv.tf  docker.md  docker.md.tpl  docker.tf  github.tf  main.tf  repos.tf  ssh_keys.tf
aws/accuen/qubole/: ami.tf  ansible.cfg  ec2.tf  keys.yml  main.tf  r53.tf  rds.tf  sg.tf  ssh.cfg  vpc.tf
aws/accuen/repos/: main.tf  packer_repos.tf  repos.tf
aws/accuen/tfe/: main.tf
aws/accuen/tstusr/: github.tf  main.tf  users.tf
aws/accuen/users/: keys.tf  main.tf  variables.tf
containers/airflow/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
containers/airflow-base/: Dockerfile
containers/airflow/airflow/: Dockerfile  entrypoint.sh
containers/airflow/base/: Dockerfile  pyproject.toml
containers/airflow/initdb/: Dockerfile  airflow.sql  docker-compose.yml  run.sh
containers/pgcli/: Dockerfile  build.sh
containers/python3.7-slim/: Dockerfile  Makefile
containers/python3.7-ssh/: Dockerfile  Makefile
containers/tunnel/: Dockerfile  Makefile  build.sh  ssh.config
etc/: builder.pub  buildkite.pub  dev1_bastion.pub  entrypoint.pub  packer_smp.pub  smp_dev_db_2019_07.pub
scripts/: sh.py
scripts/buildkite/: pyproject.toml  run.py
scripts/postgres/: .gitignore  README.md  dbd.sh  test.sh
scripts/slack/: hello.py  notify.py  pyproject.toml
terraform-modules/buildenv/: ami.tf  ec2_bastion.tf  ec2_builder.tf  main.tf  outputs.tf  r53.tf  sg.tf  variables.tf  vpc.tf
terraform-modules/devenv/: ami.tf  ec2_bastion.tf  main.tf  outputs.tf  sg.tf  vpc.tf
terraform-modules/repository/: document.tf  ecr.tf  github.tf  repo.md  vars.tf
terraform-modules/repository_existing/: document.tf  ecr.tf  github.tf  repo.md  vars.tf
tfm/: README.md  build.sh
tfm/aws/bastion/: ami.tf  ec2_bastion.tf  main.tf  r53.tf  sg.tf  variables.tf
tfm/aws/batch/: batch.tf  iam.tf  outputs.tf  sg.tf  variables.tf
tfm/aws/qubole/: ami.tf  ec2.tf  r53.tf  sg.tf  variables.tf  vpc.tf
tfm/buildenv/: r53.tf  sg.tf
tfm/dcdt_dev/: ami.tf  ec2.tf  init.sh  r53.tf  sg.tf  variables.tf
tfm/devenv/: ami.tf  main.tf  r53.tf  sg.tf
tfm/repository/: document.tf  github.tf  repo.md
tfm/repository_existing/: github.tf
(+66 files in other folders)
