[tool.poetry]
name = "annalect-airflow"
version = "0.1.0"
description = "annalect airflow env"
authors = ["Annalect Engineering"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.1"
sh = "^1.12"
structlog = "^19.1"

TerminalOne = "^1.8.0"
slackclient = "^1.3.0"
httplib2 = "0.13.0"
boto3 = "^1.9"
google-api-python-client = "^1.7.9"
oauth2client = "^4.1.3"
suds-jurko = "^0.6"
#qds-sdk
#awscli
#paramiko
#pandas
#tld
#s3fs
#setuptools
#wheel
#pytz
#pyOpenSSL
#ndg-httpsclient
#pyasn1
apache-airflow = "1.10.3"
# [qds,gcp_api,crypto,celery,postgres,hive,jdbc,mysql,ssh] 
redis = "^3.2"

#git+ssh://github.com/accuenmedia/dbm_airflow.git#egg=dbm_airflow
#git+ssh://github.com/accuenmedia/datalake_airflow.git#egg=datalake_airflow
#git+ssh://github.com/accuenmedia/sizmek_api.git#egg=sizmek_api
#git+ssh://github.com/accuenmedia/sizmek_airflow.git#egg=sizmek_airflow
#git+ssh://github.com/accuenmedia/terminal_one_airflow.git#egg=terminal_one_airflow

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rope = "^0.11.0"
pylint = "^2.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

appnexus-client = "0.8.0"
pycountry = "18.12.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"