[tool.poetry]
name = "annalect-airflow"
version = "0.1.0"
description = "annalect airflow env"
authors = ["Annalect Engineering"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.3.9" #aws cli depends on older version (currently at 0.4.1)
sh = "1.12.14"
structlog = "19.1.0"
TerminalOne = "1.9.3"
slackclient = "2.0.1"
httplib2 = "0.13.0"
boto3 = "1.9.173"
google-api-python-client = "1.7.9"
oauth2client = "4.1.3"
suds-jurko = "0.6"
qds-sdk = "1.12.0"
#awscli = "1.16.83" removed because of dependency conflict
paramiko = "2.5.0"
pandas = "0.24.2"
tld = "0.9.3"
s3fs = "0.2.1"
setuptools = "40.0.1"
wheel = "0.33.4"
pytz = "2019.1"
pyOpenSSL = "19.0.0"
ndg-httpsclient = "0.5.1"
pyasn1 = "0.4.5"
apache-airflow = "1.10.3"
redis = "3.2.1"
psycopg2 = "2.8.3"

#git+ssh://github.com/accuenmedia/sizmek_api.git#egg=sizmek_api

[tool.poetry.extras]
airflow = ["qds","gcp_api","crypto","celery","postgres","hive","jdbc","mysql","ssh"]

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rope = "^0.11.0"
pylint = "^2.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

appnexus-client = "0.8.0"
pycountry = "18.12.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"